fix: add some visual spacing between tiles

--- a/docs/3rd-party/unicodetiles/unicodetiles.css
+++ b/docs/3rd-party/unicodetiles/unicodetiles.css
@@ -12,7 +12,7 @@
 	font-family: "DejaVuSansMono", "DejaVu Sans Mono", monospace;
 	white-space: pre;
 	text-align: center;
-	line-height: 1em;
+	line-height: 1.1em;
 	letter-spacing: 0px;
 	display: inline-block;
 }
